--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,14 @@
   </build>
   
   <dependencies>
-  	<dependency>
-  		<groupId>javax.ws.rs</groupId>
-  		<artifactId>javax.ws.rs-api</artifactId>
-  		<version>2.0.1</version>
+    <dependency>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0.1</version>
       <scope>provided</scope>
-  	</dependency>
+    </dependency>
   	
-  	<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+    <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
@@ -49,16 +49,16 @@
       <groupId>org.glassfish.jersey.bundles</groupId>
       <artifactId>jaxrs-ri</artifactId>
       <version>2.13</version>
-      <scope>provided</scope>
+      <!-- <scope>provided</scope> -->
     </dependency>
     
     <!-- https://mvnrepository.com/artifact/org.json/json -->
-	<dependency>
+    <dependency>
     	<groupId>org.json</groupId>
     	<artifactId>json</artifactId>
     	<version>20160810</version>
     	<scope>provided</scope>
-	</dependency>
+    </dependency>
   </dependencies>
   
 </project>
