--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
     	<groupId>org.json</groupId>
     	<artifactId>json</artifactId>
     	<version>20160810</version>
-    	<scope>provided</scope>
+      <!-- <scope>provided</scope> -->
     </dependency>
   </dependencies>
   
